[gd_scene load_steps=8 format=3 uid="uid://cl0m87n0gki35"]

[ext_resource type="Script" path="res://Scripts/UI/title_page.gd" id="1_0p4it"]
[ext_resource type="Texture2D" uid="uid://bu2m1i7bjxe24" path="res://Assets/Sprites/TitleLogo.png" id="2_dlum4"]
[ext_resource type="PackedScene" uid="uid://gglomivxwh2s" path="res://Scenes/UI/SettingsUI.tscn" id="3_2ck8b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5w06x"]
bg_color = Color(0.52549, 0.364706, 0.129412, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q5uco"]
bg_color = Color(0.92549, 0.698039, 0.34902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_52e5h"]
bg_color = Color(0.893255, 0.465569, 0.231721, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.990424, 0.740298, 0.551711, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o4abw"]
bg_color = Color(0.737255, 0.564706, 0.34902, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="TitlePage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0p4it")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 342.0
offset_top = 67.0
offset_right = -342.0
offset_bottom = -296.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.647059, 0.192157, 0.847059, 1)
theme_override_font_sizes/bold_italics_font_size = 60
theme_override_font_sizes/italics_font_size = 13
theme_override_font_sizes/normal_font_size = 13
theme_override_font_sizes/bold_font_size = 13
bbcode_enabled = true
text = " [b][i][center]Boil 
--------- n' ---------
Bubble[/center][/i][/b]"
fit_content = true
scroll_active = false

[node name="StartButtonPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.279
anchor_top = 0.728
anchor_right = 0.447
anchor_bottom = 0.898
offset_left = -0.40802
offset_top = 0.255951
offset_right = 0.0559692
offset_bottom = 0.0958862
theme_override_styles/panel = SubResource("StyleBoxFlat_5w06x")

[node name="StartButton" type="Button" parent="StartButtonPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.043
anchor_top = 0.069
anchor_right = 0.957
anchor_bottom = 0.931
offset_left = -0.052
offset_top = -0.00300026
offset_right = 0.052002
offset_bottom = 0.00299835
theme_override_colors/font_color = Color(0.52549, 0.364706, 0.129412, 1)
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_q5uco")
text = "Start"

[node name="SettingsButtonPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.57
anchor_top = 0.728
anchor_right = 0.775
anchor_bottom = 0.898
offset_left = 0.359924
offset_top = 0.255981
offset_right = 0.199951
offset_bottom = 0.0959473
theme_override_styles/panel = SubResource("StyleBoxFlat_5w06x")

[node name="SettingsButton" type="Button" parent="SettingsButtonPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.043
anchor_top = 0.069
anchor_right = 0.957
anchor_bottom = 0.931
offset_left = -0.052
offset_top = -0.00300026
offset_right = 0.052002
offset_bottom = 0.00299835
theme_override_colors/font_color = Color(0.52549, 0.364706, 0.129412, 1)
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_q5uco")
text = "Settings"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.273
anchor_top = 0.012
anchor_right = 0.735
anchor_bottom = 0.693
offset_left = -0.496002
offset_top = 0.224
offset_right = 0.279968
offset_bottom = -0.0640259
texture = ExtResource("2_dlum4")
expand_mode = 2

[node name="SettingsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CloseButton" type="Button" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.077
anchor_top = 0.591
anchor_right = 0.223
anchor_bottom = 0.685
offset_left = 0.29599
offset_top = 0.0319824
offset_right = 0.104004
offset_bottom = 0.119965
theme_override_styles/hover = SubResource("StyleBoxFlat_52e5h")
theme_override_styles/normal = SubResource("StyleBoxFlat_52e5h")

[node name="CloseLabel" type="RichTextLabel" parent="SettingsPanel/CloseButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.048
anchor_top = 0.033
anchor_right = 0.369
anchor_bottom = 0.967
offset_left = -0.0640001
offset_top = -0.013
offset_right = 0.00799561
offset_bottom = 0.0129967
mouse_filter = 2
theme_override_colors/default_color = Color(0.803922, 0, 0, 1)
theme_override_font_sizes/bold_font_size = 41
bbcode_enabled = true
text = "[center][b]X"
scroll_active = false

[node name="SettingsSpine" type="Panel" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.14
anchor_top = 0.049
anchor_right = 0.865
anchor_bottom = 0.756
theme_override_styles/panel = SubResource("StyleBoxFlat_o4abw")

[node name="Settings" parent="SettingsPanel/SettingsSpine" instance=ExtResource("3_2ck8b")]
layout_mode = 1

[connection signal="pressed" from="StartButtonPanel/StartButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="SettingsButtonPanel/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="SettingsPanel/CloseButton" to="." method="_on_close_button_pressed"]
